# trainlytics_codespeak

./: .gitignore  README.md  codespeak.json  docker-compose.prod.yml  docker-compose.yml
.codespeak/: codespeak_state.json  implemented_change_requests.json  spec_before_refinement.md
.codespeak/specs_snapshots/: specs.backend_api  specs.data_layer  specs.frontend
backend/: .coverage  Dockerfile  alembic.ini  pyproject.toml
backend/app/: auth.py  config.py  dependencies.py  main.py
backend/app/api/: auth.py  cardio_types.py  exercise_types.py  exercises.py  sessions.py  templates.py
backend/app/models/: __init__.py  cardio_activity_type.py  exercise.py  exercise_type.py  session.py  template.py
backend/app/schemas/: cardio_activity_type.py  exercise.py  exercise_type.py  session.py  template.py
backend/app/services/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_exercises_table.py  0002_create_cardio_activity_types_table.py  0003_create_sessions_tables.py  0004_create_strength_tables.py  0005_create_strength_template_tables.py  0006_phase3_schema_additions.py  0007_create_exercise_types_tables.py
backend/tests/: conftest.py  test_auth.py  test_cardio_types.py  test_exercise_types.py  test_exercises.py  test_sessions.py  test_templates.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: LoginPage.test.tsx  TimeInput.test.tsx
scripts/: deploy.sh
specs/: backend_api.cs.md  backend_tests.cs.md  frontend.cs.md
(+17 files in other folders)
